jac2020/jacBuild8/classes/com/esarks/arm/applicationFramework/Router.err
C:\GitHub\JAC2020\jac2020\jacBuild8\classes\com\esarks\arm\applicationFramework\Router.java:21: error: '{' expected
public class Router com.esarks.mic.MicScriptHelper  {
                   ^
1 error
